Paint app in gtk4-demo: Assertion failure and unexpected behaviour
Steps to reproduce
- Open "Paint" demo in gtk4-demo
- Open the color switcher
- Double-tap with the tablet pen somewhere on the color switcher window (in the video below the double-tap is on a color button, but tapping the window background behaves the same)
Current behavior
The popup window closes, and a line immediately starts being drawn on the canvas again at maximum pen pressure (cf. the thickness of the line). Note that the pen is not touching the surface now (neither physically, nor logically), but it is still in proximity of the tablet. At the same time, the terminal is spammed with
(gtk4-demo:98521): Gdk-CRITICAL **: 17:00:03.312: gdk_device_tool_get_tool_type: assertion 'tool != NULL' failed
messages. These stop only when the pen is touched down completely. When leaving proximity of the tablet surface and entering it again, the line continues to be drawn.
See also the video below.
Expected outcome
Nothing happens/the color is selected, but the popup window stays open. No Gdk-CRITICAL
, and no line should be drawn.
Version information
- gtk4-demo 4.2.1
- mutter 40.3
- Arch